--- a/styles/experience.css
+++ b/styles/experience.css
@@ -80,7 +80,7 @@ article {
   gap: 0.5rem;
 }
 
-@media screen and (max-width: 600px) {
+/* @media screen and (max-width: 600px) {
   #experience .details-container {
     flex-direction: column;  
     margin-bottom: 2rem;
@@ -97,4 +97,36 @@ article {
       display: block;
       width: 100%;
   }
+} */
+
+#experience {
+  height: auto; 
+  padding: 3% 10% 10%;
+}
+
+@media screen and (max-width: 768px) {
+  #experience {
+    padding: 3% 5% 10%; 
+  }
+}
+
+@media screen and (max-width: 600px) {
+  #experience {
+    padding: 3% 2% 10%; 
+    flex-direction: column;  
+    margin-bottom: 2rem;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  /* #experience {
+    padding: 3% 1% 10%; 
+  } */
+  #experience .about-containers {
+    display:block;
+  }
+  #experience .details-container {
+    display: block;
+    width: 100%;
+}
 }
